--- a/Builds/VisualStudio2010/FriendlyBinaryBuilder.vcxproj
+++ b/Builds/VisualStudio2010/FriendlyBinaryBuilder.vcxproj
@@ -125,8 +125,9 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Source\MainComponent.cpp" />
+    <ClCompile Include="..\..\Source\MainWindow.cpp" />
     <ClCompile Include="..\..\Source\Main.cpp" />
+    <ClCompile Include="..\..\Source\MainComponent.cpp" />
     <ClCompile Include="..\..\..\juce\modules\juce_core\text\juce_CharacterFunctions.cpp">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </ClCompile>
@@ -928,6 +929,7 @@
     <ClCompile Include="..\..\..\juce\modules\juce_gui_extra\juce_gui_extra.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\MainWindow.h" />
     <ClInclude Include="..\..\Source\MainComponent.h" />
     <ClInclude Include="..\..\..\juce\modules\juce_core\text\juce_CharacterFunctions.h" />
     <ClInclude Include="..\..\..\juce\modules\juce_core\text\juce_CharPointer_ASCII.h" />
