Added BinaryBuilder class.

--- a/Builds/VisualStudio2010/FriendlyBinaryBuilder.vcxproj
+++ b/Builds/VisualStudio2010/FriendlyBinaryBuilder.vcxproj
@@ -125,6 +125,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\BinaryBuilder.cpp" />
     <ClCompile Include="..\..\Source\MainWindow.cpp" />
     <ClCompile Include="..\..\Source\Main.cpp" />
     <ClCompile Include="..\..\Source\MainComponent.cpp" />
@@ -929,6 +930,7 @@
     <ClCompile Include="..\..\..\juce\modules\juce_gui_extra\juce_gui_extra.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\BinaryBuilder.h" />
     <ClInclude Include="..\..\Source\MainWindow.h" />
     <ClInclude Include="..\..\Source\MainComponent.h" />
     <ClInclude Include="..\..\..\juce\modules\juce_core\text\juce_CharacterFunctions.h" />
