--- a/Builds/VisualStudio2008/FriendlyBinaryBuilder.vcproj
+++ b/Builds/VisualStudio2008/FriendlyBinaryBuilder.vcproj
@@ -12,7 +12,6 @@
   <Configurations>
     <Configuration Name="Debug|Win32"
                    OutputDirectory=".\Debug"
-                   IntermediateDirectory=".\Debug"
                    ConfigurationType="1"
                    UseOfMFC="0"
                    ATLMinimizesCRunTimeLibraryUsage="false"
@@ -68,7 +67,6 @@
     </Configuration>
     <Configuration Name="Release|Win32"
                    OutputDirectory=".\Release"
-                   IntermediateDirectory=".\Release"
                    ConfigurationType="1"
                    UseOfMFC="0"
                    ATLMinimizesCRunTimeLibraryUsage="false"
@@ -129,15 +127,17 @@
   <References/>
   <Files>
     <Filter Name="FriendlyBinaryBuilder">
+      <File RelativePath="..\..\Source\Main.cpp"/>
       <File RelativePath="..\..\Source\MainComponent.cpp"/>
       <File RelativePath="..\..\Source\MainComponent.h"/>
       <File RelativePath="..\..\Source\MainWindow.cpp"/>
       <File RelativePath="..\..\Source\MainWindow.h"/>
       <File RelativePath="..\..\Source\BinaryBuilder.cpp"/>
       <File RelativePath="..\..\Source\BinaryBuilder.h"/>
+      <File RelativePath="..\..\Source\CustomLookAndFeel.cpp"/>
+      <File RelativePath="..\..\Source\CustomLookAndFeel.h"/>
       <File RelativePath="..\..\Source\FileListComponent.cpp"/>
       <File RelativePath="..\..\Source\FileListComponent.h"/>
-      <File RelativePath="..\..\Source\Main.cpp"/>
     </Filter>
     <Filter Name="Juce Modules">
       <Filter Name="juce_core">
@@ -377,6 +377,17 @@
           <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_ChildProcess.h"/>
           <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_CriticalSection.h"/>
           <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_DynamicLibrary.h"/>
+          <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_HighResolutionTimer.cpp">
+            <FileConfiguration Name="Debug|Win32"
+                               ExcludedFromBuild="true">
+              <Tool Name="VCCLCompilerTool"/>
+            </FileConfiguration>
+            <FileConfiguration Name="Release|Win32"
+                               ExcludedFromBuild="true">
+              <Tool Name="VCCLCompilerTool"/>
+            </FileConfiguration>
+          </File>
+          <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_HighResolutionTimer.h"/>
           <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_InterProcessLock.h"/>
           <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_Process.h"/>
           <File RelativePath="..\..\..\juce\modules\juce_core\threads\juce_ReadWriteLock.cpp">
@@ -535,6 +546,17 @@
           <File RelativePath="..\..\..\juce\modules\juce_core\files\juce_TemporaryFile.h"/>
         </Filter>
         <Filter Name="network">
+          <File RelativePath="..\..\..\juce\modules\juce_core\network\juce_IPAddress.cpp">
+            <FileConfiguration Name="Debug|Win32"
+                               ExcludedFromBuild="true">
+              <Tool Name="VCCLCompilerTool"/>
+            </FileConfiguration>
+            <FileConfiguration Name="Release|Win32"
+                               ExcludedFromBuild="true">
+              <Tool Name="VCCLCompilerTool"/>
+            </FileConfiguration>
+          </File>
+          <File RelativePath="..\..\..\juce\modules\juce_core\network\juce_IPAddress.h"/>
           <File RelativePath="..\..\..\juce\modules\juce_core\network\juce_MACAddress.cpp">
             <FileConfiguration Name="Debug|Win32"
                                ExcludedFromBuild="true">
@@ -1679,6 +1701,16 @@
             </FileConfiguration>
           </File>
           <File RelativePath="..\..\..\juce\modules\juce_graphics\native\juce_android_GraphicsContext.cpp">
+            <FileConfiguration Name="Debug|Win32"
+                               ExcludedFromBuild="true">
+              <Tool Name="VCCLCompilerTool"/>
+            </FileConfiguration>
+            <FileConfiguration Name="Release|Win32"
+                               ExcludedFromBuild="true">
+              <Tool Name="VCCLCompilerTool"/>
+            </FileConfiguration>
+          </File>
+          <File RelativePath="..\..\..\juce\modules\juce_graphics\native\juce_freetype_Fonts.cpp">
             <FileConfiguration Name="Debug|Win32"
                                ExcludedFromBuild="true">
               <Tool Name="VCCLCompilerTool"/>
